tests/sksl/errors/ReturnMissingValue.glsl
### Compilation failed:

error: 1: expected function to return 'int'
int foo() { return; }
            ^^^^^^^
1 error
